kubernetes/apps/default/paperless/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: paperless
    namespace: default
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`paperless.${SECRET_DOMAIN}`)
          middlewares:
            - name: headers
              namespace: networking
            - name: authelia
              namespace: default
          services:
            - name: paperless
              port: 8000
              namespace: default
    tls:
        secretName: ${SECRET_CERT_NAME}-prod-tls
